Introduce FailFastWriteField subclass